typescript/checker/tests/conformance/parser/ecmascript5/Accessors/parserAccessors1.ts.stderr
error: GetterPropWithoutReturn {
    span: Span {
        lo: BytePos(
            36,
        ),
        hi: BytePos(
            39,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserAccessors1.ts:3:9
  |
3 |     get Foo() { }
  |         ^^^

